--- a/Week_10/index.html
+++ b/Week_10/index.html
@@ -21,6 +21,8 @@
   vegaEmbed('#choropleth_map', spec2).then(function(result) {
     // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
+  d3.json("bar chart.json").then(function(data) {
+  }).catch(console.error);
 </script>
 
 </body>
