--- a/A2/index.html
+++ b/A2/index.html
@@ -6,21 +6,163 @@
   <script src="https://cdn.jsdelivr.net/npm/vega-lite@5.5.0"></script>
   <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.21.0"></script>
   
+  <!-- Import pure.css -->
+  <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.3/build/pure-min.css"
+    integrity="sha384-cg6SkqEOCV1NbJoCu11+bm0NvBRc8IYLRGXkmNrqUBfTjmMYwNKPWBTIKyw9mHNJ" crossorigin="anonymous">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Google font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+
   <!-- CSS file -->
   <link rel="stylesheet" type="text/css" href="css/styles.css" media="all">
 
 
+
 </head>
 <body>
-  
-<div id="choropleth_map"></div>
+
+  <div class="page">
+    <div class="pure-g">
+    <div class="pure-u-1-1">
+      <h1 style="color:rgb(52, 66, 92);">Global Electricity Statistics</h1>
+      <div class="pure-u-1-1">
+      <p><strong style="color:#377eb8">Net generation</strong> and <strong style="color:#377eb8">Net consumption</strong> are the decline in 
+          electricity used to operate power stations, the main metric for assessing global electricity. 
+          Analysis to determine each country's own electricity production.</p>
+        <p>Net generation is the total electricity a generator generates less the electricity required 
+          to run the power plant. Net consumption less losses in the transportation and distribution 
+          networks equals net power consumption. Analyze the available electricity situation in each 
+          country through the following visual chart.</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+  <div class="page">
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-2">
+        <div class="description description-left">
+          <h2 style="color:rgb(52, 66, 92)">Global Electricity in 1980</h2>
+        </div>
+      </div>
+      <div class="pure-u-1-1">
+        <div id="vis1" class="vis-container"></div></div>
+        <div class="pure-u-1-2">
+        <p>This map shows net power around the world.The darker the colour 
+          the more electricity is used by the country.</p>
+      </div>
+      <div class="pure-u-1-2">
+        <p>Overall, most countries produce around 1-100 billion kWh of electricity, with 
+          slight fluctuations corresponding to country size, which is a relatively normal range, 
+          but there are some particularly prominent countries, such as the United States, which 
+          netted almost 2,300 billion kWh of electricity in 1980.</p>
+      </div>
+    </div>
+  </div>
+  <!-- end pure grid group -->
+
+  <div class="page">
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-1-1">
+        <div class="description description-left">
+          <h2 style="color:rgb(52, 66, 92);">Net generation</h2>
+          <p> In this bar shows the total net generation for each region in <strong style="color:#377eb8;">1980</strong>, which categorised by region.</p>
+        </div>
+      </div>
+      <div class="pure-u-1-1">
+        <div id="vis2" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-2">
+        <p> South America produces the most electricity (around 2700), almost <strong style="color:#377eb8;">twice</strong> as much as the second place Europe produces.</p>
+        <p> Asia & Oceania ranked third, with a net generation of 1,266. Apart from that, the remaining three continents have a <strong style="color:#377eb8;">much smaller</strong> net generation in comparison.</p>
+      </div>
+      <div class="pure-u-1-2">
+        <p> Darker colors indicate regions with higher net generation, allowing for quick visual comparisons.</p>
+      </div>
+    </div>
+  </div>
+  <!-- end pure grid group -->
+
+  <div class="page">
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-2-3">
+        <div id="vis3" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right">
+          <h2 style="color:rgb(52, 66, 92);">Net consumpation</h2>
+          <p>The graph shows the evolution of net electricity consumption over time from 1980 to 
+            2021. It is clear that net electricity use is generally on an upward trend with occasional 
+            fluctuations in global consumption. </p>
+        </div>
+        <div class="pure-u-1-2">
+          <p>"North America" (red) consistently has the highest net electricity consumption. 
+            "Asia and Oceania" (blue) shows a significant increase in consumption over the years. 
+            "Africa" (purple) and "Central and South America" (brown) show moderate growth. 
+            "Europ"e (orange) follows a relatively stable pattern. 
+            "Middle East" (light blue) has shown significant growth over the last few years.</p>
+         </div>
+      </div>
+  </div>
+  <!-- end pure grid group -->
+
+  <div class="page">
+
+    <!-- pure grid group -->
+    <div class="pure-g">
+      <div class="pure-u-2-3">
+        <div id="vis4" class="vis-container"></div>
+      </div>
+      <div class="pure-u-1-3">
+        <div class="description description-right">
+          <h2>Electricity consumption by continent(individual countries)</h2>
+          <p>Countries which in same continent are combined. In 2000, some countries 
+            in South America had a huge electricity consumption of <strong style="color:#377eb8;">almost 3,500</strong>, while 80 
+            per cent of the countries had a consumption of almost 1,000. </p>
+        </div>
+      </div>
+
+    </div>
+    <!-- end pure grid group -->
+
+<div class="page">
+
+</div> 
+<!-- end page -->
 
 <script type="text/javascript">
 
-  var spec2 = "js/map.json";
-  vegaEmbed('#choropleth_map', spec2).then(function(result) {
-    // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  var specVis1 = "js/map.json";
+  var specVis2 = "js/bar.json";
+  var specVis3 = "js/line.json";
+  var specVis4 = "js/bot.json";
+
+  vegaEmbed('#vis1', specVis1, { "actions": false }).then(function (result) {
+   // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
   }).catch(console.error);
+
+  vegaEmbed('#vis2', specVis2, { "actions": false }).then(function (result) {
+   // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+
+  vegaEmbed('#vis3', specVis3, { "actions": false }).then(function (result) {
+   // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+
+  vegaEmbed('#vis4', specVis4, { "actions": false }).then(function (result) {
+   // Access the Vega view instance (https://vega.github.io/vega/docs/api/view/) as result.view
+  }).catch(console.error);
+
 </script>
 
 </body>
