--- a/A2/index.html
+++ b/A2/index.html
@@ -86,6 +86,7 @@
       </div>
       <div class="pure-u-1-2">
         <p> Darker colors indicate regions with higher net generation, allowing for quick visual comparisons.</p>
+        <p> We can observe that in 1980 the gap between each continent was still relatively large.</p>
       </div>
     </div>
   </div>
@@ -95,17 +96,12 @@
 
     <!-- pure grid group -->
     <div class="pure-g">
-      <div class="pure-u-2-3">
-        <div id="vis3" class="vis-container"></div>
-      </div>
       <div class="pure-u-1-3">
         <div class="description description-right">
           <h2 style="color:rgb(52, 66, 92);">Net consumpation</h2>
           <p>The graph shows the evolution of net electricity consumption over time from 1980 to 
             2021. It is clear that net electricity use is generally on an upward trend with occasional 
             fluctuations in global consumption. </p>
-        </div>
-        <div class="pure-u-1-2">
           <p>"North America" (red) consistently has the highest net electricity consumption. 
             "Asia and Oceania" (blue) shows a significant increase in consumption over the years. 
             "Africa" (purple) and "Central and South America" (brown) show moderate growth. 
@@ -113,7 +109,12 @@
             "Middle East" (light blue) has shown significant growth over the last few years.</p>
          </div>
       </div>
+      <div class="pure-u-2-3">
+        <div id="vis3" class="vis-container"></div>
+      </div>
+    </div>
   </div>
+
   <!-- end pure grid group -->
 
   <div class="page">
@@ -131,13 +132,9 @@
             per cent of the countries had a consumption of almost 1,000. </p>
         </div>
       </div>
-
+    </div>
     </div>
     <!-- end pure grid group -->
-
-<div class="page">
-
-</div> 
 <!-- end page -->
 
 <script type="text/javascript">
